--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "http-status-codes": "^2.2.0",
     "joi": "17.6.0",
     "jsonwebtoken": "8.5.1",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^2.3.0"
   }
 }
